--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,14 +1,17 @@
 footer {
-    background-color: #00FF00;
     height: 60px;
+    line-height: 60px;
     width: 100%;
     border-top: 1px solid #CCCCCC;
+    background-color: white;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
 footer p {
-    color: white;
+    color: black;
+    vertical-align: middle;
+    text-align: center;
 }
