--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -3,7 +3,7 @@
 	height: 70px;
 	border: solid 1px #DDDDDD;
 	border-radius: 4px;
-	width: 100%
+	width: 100%;
 	text-align: right;
 	display: flex;
 	justify-content: flex-end;
@@ -14,7 +14,7 @@ button {
 	width: 20%;
 	font-size: 18px;
 	opacity: 1;
-	color: white;
+	color: #FFFFFF;
 	height: 48px;
 	border: 0px;
 	border-radius: 4px;
