--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,76 +1,139 @@
-.filters {
-    border: 1px solid #DDDDDD;
-    display: inline-block;
-    background-color: white;
-    width: 100%;
-    height: 70px;
-    border-radius: 4px;
+.locations {
     text-align: left;
+    height: 100%;
+    width: 25%;
+    border-right: solid 1px #DDDDDD;
+    float: left;
 }
 
-.locations {
-    width: 25%;
-    display: inline-block;
-    height: 100%;
-    border-right: 1px solid #DDDDDD;
-    margin-left: 40px;
+.popover_list {
+    padding: 0px;
+    margin: 0px;
+    padding-left: 10%;
+}
+
+.locations h3,
+.locations h4 {
+    font-weight: 600;
+    margin: 0px;
+    padding: 0px;
+    padding-left: 30px;
+    margin-top: 17px;
 }
 
 .amenities {
-    width: 25%;
-    display: inline-block;
+    text-align: left;
+    align-content: flex-start;
     height: 100%;
-    position: absolute;
-    margin-left: 40px;
+    width: 25%;
+    float: left;
 }
 
-h3 {
-    margin-top: 10px;
-    font-weight: 600;
+.locations:hover > .popover {
+    visibility: visible;
+    margin-bottom: 50px;
 }
 
-h4 {
-    margin-top: -12px;
-    font-size: 14px;
+.popover li h2 {
+    padding: 0;
+    margin: 0;
+}
+
+ul {
+    padding-top: 30px;
+}
+
+.amenities h3,
+.amenities h4 {
     font-weight: 400;
+    font-size: 14px;
+    padding-left: 30px;
+    margin: 0px;
+    padding: 0px;
 }
 
-ul, li {
-    margin: 10px auto;
-    list-style-type: none;
-    line-height: 10px;
+.locations h4,
+.locations h3 {
+    margin: 0px;
+    padding: 0px;
+    font-weight: 400;
+    font-size: 14px;
+    padding-left: 30px;
+    margin-top: 17px;
 }
 
-button {
-    width: 20%;
-    height: 48px;
-    float: right;
-    background-color: #ff5a5f;
-    color: #FFFFFF;
-    font-size: 18px;
+.amenities:hover > .popover {
+    visibility: visible;
+}
+
+.amenities h3,
+.locations h3 {
+    font-weight: 600;
+    margin: 0px;
+    margin-top: 17px;
+    padding: 0px;
+    padding-left: 30px;
+}
+
+.amenities h4,
+.locations h4 {
+    margin: 0px;
+    padding: 0px;
+    font-weight: 400;
+    font-size: 14px;
+    padding-left: 30px;
+}
+
+.filters {
     border-radius: 4px;
-    margin-right: 20px;
-    position: relative;
+    text-align: right;
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: solid 1px #DDDDDD;
+    
 }
 
-button:hover {
+section.filters button {
+    font-size: 18px;
+    background-color: #FF5A5F;
+    border-radius: 4px;
+    color: white;
+    height: 48px;
+    width: 20%;
+    border: none;
+    margin-top: 11px;
+    margin-bottom: 11px;
+    margin-right: 30px;
+    
+}
+
+section.filters button:hover {
     opacity: 0.9;
 }
 
+ul {
+    list-style: none;
+}
+
 .popover {
-    display: none;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    background-color: #FAFAFA;
     border-radius: 4px;
-    margin-left: -41px;
+    margin-top: 7%;
+    padding-bottom: 10%;
+    z-index: 1;
+    visibility: hidden;
     position: relative;
+    background-color: #FAFAFA;
+    border: solid #DDDDDD 1px;
 }
 
-div.locations:hover ul.popover {
-    display: block;
+.popover li h2 {
+    margin: 0;
+    padding: 0;
+    
 }
 
-div.amenities:hover ul.popover {
-    display: block;
+li {
+    padding-bottom: 5%;
+    list-style-type: none;
 }
