--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,27 +1,37 @@
 .places {
-    font-size: 30px;
+    flex-direction: column;
     padding-left: 30px;
-    text-align: center;
+    border: 0;
+    display: flex;
 }
 
 .places h1 {
-    text-align: left;
-    margin: 15px;
+    font-size: 30px;
 }
 
-h2 {
-    text-align: center;
+.my_places {
+    margin-bottom: -25px;
+    padding-top: 30px;
 }
 
-article {
-    border: 1px solid #FF5A5F;
+.places article {
     border-radius: 4px;
-    display: inline-block;
+    text-align: center;
+    font-size: 30px;
     width: 390px;
-    padding: 20px;
     margin: 20px;
+    padding: 20px;
+    border: solid #FF5A5F 1px;
 }
 
 article h2 {
+    margin-top: -2px;
     font-size: 30px;
+}
+
+.articles {
+    flex-wrap: wrap;
+    justify-content: center;
+    display: flex;
+    align-items: baseline;
 }
