--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -35,22 +35,16 @@ article {
 
 
 .price_by_night {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 5px;
-}
-
-.price_by_night p {
     border: 4px solid #FF5A5F;
     border-radius: 50%;
     color: #FF5A5F;
     font-size: 30px;
     height: 60px;
     min-width: 60px;
-    padding: 5px;
+    position: absolute;
+    right: 10px;  /* Adjust this value to position it as per your preference */
+    top: 100px;    /* Adjust this value to position it as per your preference */
 }
-
 
 
 
