--- a/web_static/styles/102-header.css
+++ b/web_static/styles/102-header.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #333; /* Change color to a suitable background color */
+    background-color: white /* Change color to a suitable background color */
     display: flex;
     align-items: center;
     height: 70px;
