--- a/web_static/styles/103-header.css
+++ b/web_static/styles/103-header.css
@@ -1,14 +1,19 @@
 header {
-    color: white;
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
     display: flex;
     align-items: center;
+    color: #333; /* Dark text color */
+    background-color: white;
 }
 header .logo {
     height: 60px;
     width: 142px;
     background: url("../images/logo.png") no-repeat center;
     padding-left: 20px;
+}
+
+header:focus {
+    outline: 2px solid #007BFF; /* Blue outline for focus */
 }
